# ios-photobooth

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-macos-arm64.yml  release.yml
.hermes/: PLAN.md
src/: AGENTS.md  App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ios_camera_stream/: Package.swift
src-tauri/ios_camera_stream/Sources/: main.swift
src-tauri/resources/: ios_camera_stream
src-tauri/src/: AGENTS.md  adb.rs  camera.rs  camera_stream.rs  deep_link.rs  ffmpeg.rs  ios_camera.rs  lib.rs  main.rs  photo.rs  printer.rs  restart.rs  scrcpy.rs  stream.rs  template.rs  updater.rs  utils.rs
src/components/: IdleView.vue  SettingsModal.vue  SettingsPanel.vue  UpdateBanner.vue  WelcomeScreen.vue
src/stores/: camera.ts  capture.ts  scrcpy.ts  template.ts  update.ts
src/styles/: main.css  tailwind.css
src/views/: CaptureView.vue  PreviewView.vue  PrintView.vue  SelectView.vue  SelectionView.vue
