[package]
name = "photobooth"
version = "1.0.0"
edition = "2021"

[lib]
name = "photobooth_lib"
crate-type = ["rlib"]

[[bin]]
name = "photobooth"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
once_cell = "1"
thiserror = "2"
chrono = "0.4"
semver = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
