[package]
name = "photobooth"
version = "1.0.0"
edition = "2021"

[lib]
name = "photobooth_lib"
crate-type = ["rlib"]

[[bin]]
name = "photobooth"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
